[package]
name = "fp-consensus"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for Frontier consensus"
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false, features = ["derive"] }
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.8", default-features = false }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"codec/std",
	"ethereum/std",
	"rlp/std",
	"sha3/std",
]
