[package]
name = "fp-evm"
version = "1.0.1-dev"
license = "Apache-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/frontier/"
description = "Primitive EVM abstractions for Substrate."
documentation = "https://docs.rs/sp-evm"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99", default-features = false }
sp-std = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false }
evm = { version = "0.27.0", default-features = false, features = ["with-codec"] }
impl-trait-for-tuples = "0.1"

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-std/std",
	"serde",
	"codec/std",
	"evm/std",
	"evm/with-serde",
]
