[package]
name = "fp-storage"
version = "1.0.1-dev"
authors = ["Parity Technologies <admin@parity.io"]
edition = "2018"
description = "Storage primitives for Ethereum RPC (web3) compatibility layer for Substrate."
license = "Apache-2.0"

[dependencies]
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
fp-evm = { version = "1.0.1-dev", default-features = false, path = "../../primitives/evm" }
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.11", default-features = false }
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "e98aca335f066d84d7a5cbabf280392f39e1cc99" }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-api/std",
	"fp-evm/std",
	"ethereum/std",
	"ethereum-types/std",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
]
